--- a/MAGA-checkpoint.ipynb
+++ b/MAGA-checkpoint.ipynb
@@ -29,7 +29,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Nx = 1000\n",
+    "# defining step sizes
+    "Nx = 1000\n"   # number of agents init,
     "Nt = 20\n",
     "\n",
     "t0 = 0\n",
@@ -64,7 +65,6 @@
     "\n",
     "radius_weights = False\n",
     "\n",
-    "# dont worry about this -- yet to be implemented\n",
     "T = np.linspace(0, Nt, Nt)\n",
     "T_scaled = (T/Nt)*2*np.pi"
    ]
